--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,20 +1,54 @@
-# Core Frameworks
-fastapi
-uvicorn[standard]
-python-dotenv
-pydantic-settings
-pydantic[email]
-
-
-# LangChain & LangGraph
-langchain
-langchain-google-genai
-langgraph
-langchain-community
-
-# Tool Dependencies
-amadeus
-sendgrid
-google-api-python-client
-google-auth-httplib2
-google-auth-oauthlib
+attrs==25.3.0
+blinker==1.9.0
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.1.8
+cloudpickle==3.1.1
+colorama==0.4.6
+cycler==0.12.1
+Farama-Notifications==0.0.4
+filelock==3.18.0
+Flask==3.1.0
+fonttools==4.57.0
+fsspec==2025.3.2
+git-filter-repo==2.47.0
+gymnasium==1.1.1
+h11==0.14.0
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+kiwisolver==1.4.8
+MarkupSafe==3.0.2
+mpmath==1.3.0
+mss==10.0.0
+networkx==3.4.2
+numpy==2.2.4
+opencv-python==4.11.0.86
+outcome==1.3.0.post0
+packaging==24.2
+pillow==11.2.1
+pycparser==2.22
+pygame==2.6.1
+pynput==1.8.1
+pyparsing==3.2.3
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+pytz==2025.2
+requests==2.32.3
+selenium==4.30.0
+setuptools==78.1.0
+six==1.17.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+sympy==1.13.1
+trio==0.29.0
+trio-websocket==0.12.2
+typing_extensions==4.13.0
+tzdata==2025.2
+undetected-chromedriver==3.5.5
+urllib3==2.3.0
+websocket-client==1.8.0
+websockets==15.0.1
+Werkzeug==3.1.3
+wsproto==1.2.0
