--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,56 +1,98 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.13
+aiosignal==1.3.2
+amadeus==12.0.0
+annotated-types==0.7.0
+anyio==4.9.0
 attrs==25.3.0
-blinker==1.9.0
-certifi==2025.1.31
-cffi==1.17.1
-charset-normalizer==3.4.1
-click==8.1.8
-cloudpickle==3.1.1
+cachetools==5.5.2
+certifi==2025.6.15
+charset-normalizer==3.4.2
+click==8.2.1
 colorama==0.4.6
-cycler==0.12.1
-Farama-Notifications==0.0.4
-filelock==3.18.0
-Flask==3.1.0
-fonttools==4.57.0
-fsspec==2025.3.2
-git-filter-repo==2.47.0
-gymnasium==1.1.1
-h11==0.14.0
+cssselect==1.3.0
+cssutils==2.11.1
+dataclasses-json==0.6.7
+dnspython==2.7.0
+ecdsa==0.19.1
+email_validator==2.2.0
+fastapi==0.115.12
+filetype==1.2.0
+frozenlist==1.7.0
+google-ai-generativelanguage==0.6.18
+google-api-core==2.25.1
+google-api-python-client==2.172.0
+google-auth==2.40.3
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.2
+google_search_results==2.4.2
+googleapis-common-protos==1.70.0
+greenlet==3.2.3
+grpcio==1.73.0
+grpcio-status==1.73.0
+h11==0.16.0
+httpcore==1.0.9
+httplib2==0.22.0
+httptools==0.6.4
+httpx==0.28.1
+httpx-sse==0.4.0
 idna==3.10
-itsdangerous==2.2.0
-Jinja2==3.1.6
-kiwisolver==1.4.8
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain==0.3.25
+langchain-community==0.3.25
+langchain-core==0.3.65
+langchain-google-genai==2.1.5
+langchain-text-splitters==0.3.8
+langgraph==0.4.8
+langgraph-checkpoint==2.1.0
+langgraph-prebuilt==0.2.2
+langgraph-sdk==0.1.70
+langsmith==0.3.45
+lxml==5.4.0
 MarkupSafe==3.0.2
-mpmath==1.3.0
-mss==10.0.0
-networkx==3.4.2
-numpy==2.2.4
-opencv-python==4.11.0.86
-outcome==1.3.0.post0
+marshmallow==3.26.1
+more-itertools==10.7.0
+multidict==6.4.4
+mypy_extensions==1.1.0
+numpy==2.3.0
+oauthlib==3.2.2
+orjson==3.10.18
+ormsgpack==1.10.0
 packaging==24.2
-pillow==11.2.1
-pycparser==2.22
-pygame==2.6.1
-pynput==1.8.1
+premailer==3.10.0
+propcache==0.3.2
+proto-plus==1.26.1
+protobuf==6.31.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pydantic==2.11.7
+pydantic-settings==2.9.1
+pydantic_core==2.33.2
 pyparsing==3.2.3
-PySocks==1.7.1
-python-dateutil==2.9.0.post0
-pytz==2025.2
-requests==2.32.3
-selenium==4.30.0
-setuptools==78.1.0
+python-dotenv==1.1.0
+python-http-client==3.3.7
+PyYAML==6.0.2
+requests==2.32.4
+requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+rsa==4.9.1
+sendgrid==6.12.4
 six==1.17.0
 sniffio==1.3.1
-sortedcontainers==2.4.0
-sympy==1.13.1
-trio==0.29.0
-trio-websocket==0.12.2
-typing_extensions==4.13.0
-tzdata==2025.2
-undetected-chromedriver==3.5.5
-urllib3==2.3.0
-websocket-client==1.8.0
+SQLAlchemy==2.0.41
+starlette==0.46.2
+tenacity==9.1.2
+typing-inspect==0.9.0
+typing-inspection==0.4.1
+typing_extensions==4.14.0
+uritemplate==4.2.0
+urllib3==2.4.0
+uvicorn==0.34.3
+watchfiles==1.1.0
 websockets==15.0.1
 Werkzeug==3.1.3
-wsproto==1.2.0
-uvicorn[standard]
-
+xxhash==3.5.0
+yagmail==0.15.293
+yarl==1.20.1
+zstandard==0.23.0
